force-app/main/default/objects/Case_Status_Change__c/Case_Status_Change__c.object-meta.xml
<CustomObject>
    <description>This object is designed to log when a case status change is made</description>
    <label>Case Status Change</label>
    <nameField>
        <displayFormat>CSC-{0000}</displayFormat>
        <label>Case Status Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Status Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>