force-app/main/default/objects/Case_Status_Change__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The case for which the status is being changed</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Status Changes</relationshipLabel>
    <relationshipName>Case_Status_Changes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>