force-app/main/default/objects/Case_Status_Change__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>The value to which the case status is being changed</description>
    <label>New Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>