force-app/main/default/objects/Case_Status_Change__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>This is the value from which the case status is being changed</description>
    <label>Old Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>